--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.54.1",
+    "@tanstack/react-query-devtools": "^5.54.1",
+    "@tanstack/react-table": "^8.20.5",
+    "axios": "^1.7.7",
+    "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.26.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
