--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
+    "framer-motion": "^11.5.2",
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.2.0"
   }
