--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "resolveJsonModule": true,
     "moduleResolution": "bundler",
     "useDefineForClassFields": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "baseUrl": "./src", // Establece la base de las rutas relativas como la raíz del proyecto
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": ["src"]
 }
