--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.5.2",
     "json-server": "^1.0.0-beta.2",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.1",
+    "sonner": "^1.5.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
