--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.9.1",
     "@rsbuild/core": "1.0.1-rc.3",
     "@rsbuild/plugin-react": "1.0.1-rc.3",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "eslint": "^9.9.1",
