chore: Update cache time and per page settings for post list and post details

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 PUBLIC_BASE_URL_BACK= "http://localhost:3002"
+PUBLIC_CACHE_TIME_GET_POST = 300000
+PUBLIC_CACHE_TIME_GET_LIST_POST = 300000
+PUBLIC_PER_PAGE_GET_LIST_POST = 5
