--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PUBLIC_BASE_URL_BACK= "http://localhost:3002"
-PUBLIC_CACHE_TIME_GET_POST = 300000
-PUBLIC_CACHE_TIME_GET_LIST_POST = 300000
-PUBLIC_PER_PAGE_GET_LIST_POST = 5
+PUBLIC_CACHE_TIME_GET_POST = 300000 # 5 minutes
+PUBLIC_CACHE_TIME_GET_LIST_POST = 300000 # 5 minutes
+PUBLIC_CACHE_TIME_GET_LIST_STATUS = 3600000 # 1 hour
+PUBLIC_PER_PAGE_GET_LIST_POST = 10
