--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,5 @@ jobs:
           node-version: 18
           cache: "npm"
       - run: npm ci --legacy-peer-deps
+      - run: npm run format
       - run: npm run build   
