--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,4 +21,6 @@ jobs:
           cache: "npm"
       - run: npm ci --legacy-peer-deps
       - run: npm run format
+      - run: npm run test
+      - run: npm run test:cov
       - run: npm run build   
