--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "rsbuild preview",
-    "tailwind": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "tailwind": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -34,6 +37,11 @@
     "@eslint/js": "^9.9.1",
     "@rsbuild/core": "1.0.1-rc.3",
     "@rsbuild/plugin-react": "1.0.1-rc.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -41,8 +49,12 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^8.2.0"
   }
