feat: Add form-dinamico-estatico module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@tabla-simple/*": ["./examples/tabla-simple/*"],
       "@tabla-compleja/*": ["./examples/tabla-compleja/*"],
       "@form-dinamico-back/*": ["./examples/form-dinamico-back/*"],
+      "@form-dinamico-estatico/*": ["./examples/form-dinamico-estatico/*"],
       "@form-simple/*": ["./examples/form-simple/*"]
     }
   },
