--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sonner": "^1.5.0",
     "zod": "^3.23.8",
@@ -47,6 +49,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-dropzone": "^5.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
